--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -2,7 +2,7 @@ name: Tuğcan ÖNBAŞ
 role: Multidisiplinary Designer & Software Developer
 location: Ingolstadt, Germany 🇩🇪
 bio: "I'm a multidisciplinary designer and software developer. Pursuing a master's degree in User Experience Design at Technische Hochschule Ingolstadt. Over the years, I've been working on various projects, from mobile applications to websites, from branding to digital products. I'm passionate about creating meaningful and delightful experiences. I fuse creativity and technology to design experiences that I can code."
-image: tugcanonbas.png
+image: tugcanonbas.jpg
 email: tgcn@tugcanonbas.com
 phone: "+49 176 32207447"
 orcid: "https://orcid.org/0009-0006-2130-0282"
