--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: "Tuğcan ÖNBAŞ"
 email: tgcn@tugcanonbas.com
 description: "Multidisciplinary Designer & Software Developer based in Ingolstadt, Germany."
-baseurl: "/uxdm_vcux-hackathon-tugcanonbas"
-url: "https://tugcanonbas.github.io"
+baseurl: ""
+url: "https://tugcanonbas.com"
 author:
   name: "Tuğcan ÖNBAŞ"
   twitter: "tgcn_dev"
